global-and-add-anchor/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod07
  # annotations:
  #   cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      emptyDir: {}
    # - name: myfile
    #   hostPath:
    #     path: "*"
